# ECC

./: .gitmodules  CMakeLists.txt
cmake/: FindNlohmannJson.cmake
include/: ecc.h
src/: base64.cpp  ecc_curve.c  ecc_curve.cpp  ecc_key.c  ecc_key.cpp  ecc_point.c  ecc_point.cpp  ecc_signature.c  ecc_signature.cpp  random_by_password.c  random_by_password.cpp
